# ESG

./: .env.example  .gitignore  ESG_projectbrief.md  LICENSE  NEXTSTEPS.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: companies.py  health.py  imports.py  jobs.py  llm.py  roles.py  search.py
backend/app/db/: database.py  models.py
backend/app/extraction/: __init__.py  llm_schema.py  mock_extractor.py
backend/app/llm/: __init__.py  providers.py
backend/app/schemas/: companies.py  imports.py  jobs.py  llm.py  roles.py  search.py
backend/app/services/: api_keys.py  company_profiles.py  job_cards.py  llm_configs.py  ocr.py  role_profiles.py  search_configs.py  search_providers.py  url_reader.py
backend/tests/: conftest.py  test_company_profiles.py  test_health.py  test_imports.py  test_job_crud.py  test_job_ordering.py  test_jobs.py  test_learning_map_schema.py  test_llm_extraction_flow.py  test_llm_provider.py  test_llm_provider_configs.py  test_mock_extractor.py  test_ocr_service.py  test_rebuild_jobs.py  test_role_profiles.py  test_search_provider_configs.py  test_url_reader.py
browser-extension/: README.md  content.js  manifest.json  popup.css  popup.html  popup.js
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: JobCardItem.tsx  LearningMindMap.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/constants/: app.ts
frontend/src/pages/: ExtractionDebugPage.tsx  ImportPage.tsx  JobCardsPage.tsx  LearningMapPage.tsx  (+2 more)
(+7 files in other folders)
