[project]
name = "esg-backend"
version = "0.1.0"
description = "Local FastAPI backend for EmploymentSkillsGuide."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
